ADD : 계산식 로직 1차 완료 및 급여 이력 내역 출력